--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,3 +46,14 @@
 .cm-focused{
   outline: none;
 }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;    
+}
